--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "vue-cli-plugin-tailwind": "^0.3.2",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
@@ -37,6 +38,8 @@
   },
   "postcss": {
     "plugins": {
+      "tailwindcss": "./tailwind.config.js",
+      "vue-cli-plugin-tailwind/purgecss": {},
       "autoprefixer": {}
     }
   },
