--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@vue/cli-plugin-eslint": "^3.1.0",
     "@vue/cli-service": "^3.1.0",
     "@vue/eslint-config-prettier": "^4.0.0",
+    "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-tailwind": "^0.3.2",
     "vue-template-compiler": "^2.5.17"
   },
